Lens metadata writen on rendered images is wrong when camera lens is animated #74885

Closed
opened 2020-03-18 16:12:21 +01:00 by Julien Blervaque · 5 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 860M (also tested on 960)

Blender Version
Broken: 2.82, 2.83 alpha 8751af6d19
Worked: not found

Short description of error
When the metadata information is activated some scene information is written on the rendered images. The value of the camera lens is wrong when it refers to an animated lens in the scene (the written value is always the same... )
InvalidLensValue.jpg

Exact steps for others to reproduce the error
Create a camera and an object, animate the camera lens so that you see the framing changing over time. In Output Properties - > Metadata check Camera and Lens. Do a render of the sequence. The written values are constant whereas the lens changes on the camera.
See provided scene:
BugMetadataLens.blend

This is really annoying when in real production.

Thank you

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 860M (also tested on 960) **Blender Version** Broken: 2.82, 2.83 alpha 8751af6d1902 Worked: not found **Short description of error** When the metadata information is activated some scene information is written on the rendered images. The value of the camera lens is wrong when it refers to an animated lens in the scene (the written value is always the same... ) ![InvalidLensValue.jpg](https://archive.blender.org/developer/F8414043/InvalidLensValue.jpg) **Exact steps for others to reproduce the error** Create a camera and an object, animate the camera lens so that you see the framing changing over time. In Output Properties - > Metadata check Camera and Lens. Do a render of the sequence. The written values are constant whereas the lens changes on the camera. See provided scene: [BugMetadataLens.blend](https://archive.blender.org/developer/F8414042/BugMetadataLens.blend) This is really annoying when in real production. Thank you

Added subscriber: @Werwack

Added subscriber: @Werwack

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-03-19 11:59:59 +01:00

This issue was referenced by b8574c7e56

This issue was referenced by b8574c7e56211175a1ca990f904ff6b825686844

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74885
No description provided.