Fix T74885: Stamped lens metadata is wrong when camera lens is animated

The Lens metadata stamped on rendered images was wrong when the camera lens
is animated. This was caused by the render pipeline passing the original
camera to the metadata system, and not the evaluated camera.